# LUCID

./: .gitignore  LICENSE  README.md
docs/: paper.tex  ref.bib  tj-template-s1.tex
lucid/: .env.example  README.md  config.py  main.py  pyproject.toml
lucid/data/: student_profile.json
lucid/engine/: __init__.py  llm_client.py  orchestrator.py  profile.py  prompts.py  validator.py
lucid/ui/: __init__.py  app.py  chat_view.py  sidebar.py  theme.py
